# azouk-libraries

./: configure.ac
lib/: Makefile.am
m4/: ax_check_cxx_lib.m4
multiplexer/test/: test_mxclient.py
src/: Makefile.am
src/azouk/azlib/logging/: impl.h
src/azouk/azouk/logging/: __init__.py
src/azouk/multiplexer/: Client.cc  Config.h  ConnectionsManager.cc  Server.cc  Server.h
src/azouk/mxcontrol-commands/: StreamLogs.cc
src/multiplexer/: _mxclientmodule.cc
src/multiplexer/multiplexer/test/: test_mxclient.py
